<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama"
        android:maxLines="1"
        android:background="@drawable/bg_edit_text"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edtNohp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_no_hp"
        android:inputType="number"
        android:background="@drawable/bg_edit_text"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edtAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/masukkan_alamat"
        android:background="@drawable/bg_edit_text"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#11DAC7"
            android:layout_marginEnd="4dp"
            android:text="@string/simpan"/>

        <Button
            android:id="@+id/btnBatal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DC493E"
            android:layout_marginStart="4dp"
            android:text="@string/batal"/>

    </LinearLayout>

</LinearLayout>